[KBANK] JAVA 8 버전 이상지원으로 범위 확대